
- Adeus botões com `Tempo Esgotado`. Agora, componentes não possuem mais limite de tempo para clicar! Isso significa que você não vai precisar ficar usando o `/trisal` toda hora por que o lerdo não clicava a tempo, e também não vai mais ter problemas de comandos de economia bugando no meio do blackjack! Agora você pode usar tudo ao mesmo tempo, e ainda demorar para clicar nos botões! >,...,<

### Fixed 

- Menções de usuários no comando `/presentear` 

## [5.0.5] - 2022-12-16

### Added

- **TEMAS PARA O `/8ball`**. Agora é possível alterar a aparência do 8ball! Use `/loja temas comprar` para ver o preview, e quem sabe ja comprar de cara. Atualmente há temas para o fundo e a caixa de Mensagem. Logo logo adicionarei mais temas, junto de temas novos para a Menhera que aparece no comando. Dica de cria: os novos temas são baratinhos, e ficam perfeitos se combinarem os dois juntos.
- Comandos que mencionam outros comandos agora usam as menções de comandos do Discord! Clique em uma menção para usar o comando!

### Fixed

- O comando `/itens` não edita mais a mensagem caso você não tenha nenhum item.
- As estatísticas de apostas não mostravam o prejuízo ou lucro certo.

## [5.0.4] - 2022-12-13

### Added

- Adicionada novas respostas no comando `/8ball`

## [5.0.3] - 2022-12-09

### Added

- Novo tema de perfil! **Gatito**. Criado pela formidável Iris Yoshida#1326 (644644373035745302). Ayako para os íntimos. Ele ta uma gracinha >,..,<

### Changed

- O limite de caracteres do sobre mim foi reduzido de 200 para 120.

## [5.0.2] - 2022-12-09

### Added

- Adicionado novas respostas da Menhera no 8ball

### Fixed

- Resolvido erro envolvendo os temas ao jogar blackjack pela primeira vez.

## [5.0.1] - 2022-12-05

### Fixed

- Arrumado o texto de sucesso na caça de deuses.

## [5.0.0] - 2022-12-04

### Changed
